sandbox/output
Anagrams.java:18: error: cannot find symbol
            return Arrays.asList(string, s.substring(1, 2) + s.substring(0, 1));
                                 ^
  symbol:   variable string
  location: class Anagrams
1 error
